게시판 카테고리, 아이템 카테고리 수정